<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.GasEtaActivity">

    <android.widget.
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/corBotoes"/>

    <TextView android:id="@+id/txt_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/gasolina_x_etanol"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/btn_calcular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_titulo"
        app:layout_constraintVertical_bias="0.52">

        <EditText
            android:id="@+id/edit_gasolina"
            android:layout_width="148dp"
            android:layout_height="48dp"
            android:layout_marginEnd="20dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/r_litro_gasolina"
            app:layout_constraintEnd_toStartOf="@+id/edit_etanol"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="90dp"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/edit_etanol"
            android:layout_width="148dp"
            android:layout_height="48dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/r_litro_etanol"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout_editor_absoluteY="88dp"
            android:importantForAutofill="no" />



    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView android:id="@+id/txt_resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/resultado"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_calcular" />


    <Button
        android:id="@+id/btn_calcular"
        android:layout_width="134dp"
        android:layout_height="48dp"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:text="@string/calcular"
        android:backgroundTint="@color/corBotoes"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_titulo" />

    <Button
        android:id="@+id/btn_limpar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/corBotoes"
        android:textColor="@color/black"
        android:gravity="center"
        android:text="@string/limpar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.727"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_resultado" />

    <Button android:id="@+id/btn_salvar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/corBotoes"
        android:textColor="@color/black"
        android:enabled="false"
        android:text="@string/salvar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_limpar" />

    <Button android:id="@+id/btn_finalizar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/corBotoes"
        android:textColor="@color/black"
        android:gravity="center"
        android:text="@string/finalizar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_salvar"
        app:layout_constraintVertical_bias="0.003" />



</androidx.constraintlayout.widget.ConstraintLayout>
